--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -1,14 +1,145 @@
 #ticket-list-toggler {
-    display: none;
-    &:checked {
-        ~.profile-ticket-list {
-            // TODO
-            transform: scale(1);
-        }
-    }
+  display: none;
+  &:checked ~ .profile-ticket-list {
+    // TODO
+    transform: scale(1);
+  }
 }
 
-.profile-ticket-list {
+.profile {
+  &__upload-img {
+    display: none;
+  }
+  &__container {
+    display: flex;
+    flex-direction: column;
+  }
+  &__title {
+    color: var(--palette-tertiary-text);
+  }
+  &__body {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+    @include media-breakpoint-up(md) {
+      gap: 10px;
+    }
+    @include media-breakpoint-down(md) {
+      align-items: center;
+      flex-direction: column-reverse;
+      gap: 40px;
+    }
+  }
+  &__left {
+    display: grid;
+    gap: 20px;
+  }
+  &__avatar {
+    display: flex;
+    flex-direction: column;
+  }
+  &__avatar-img {
+    border: 2px solid var(--palette-primary-main);
+    border-radius: 50%;
+    object-fit: cover;
+    @include media-breakpoint-up(xl) {
+      width: 230px;
+      height: 230px;
+    }
+    @include media-breakpoint-down(xl) {
+      width: 200px;
+      height: 200px;
+    }
+  }
+  &__avatar-btn {
+    font-size: 20px;
+    font-weight: var(--typography-fontWeightLight);
+    display: flex;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    margin-top: 20px;
+    padding: 11px 20px;
+    cursor: pointer;
+    transition-duration: 0.3s;
+    color: var(--palette-primary-text);
+    border-radius: 5px;
+    &:hover {
+      box-shadow: var(--shadows-2);
+    }
+    &:not(:active) {
+      background-color: var(--palette-primary-main);
+    }
+    &:active {
+      background-color: var(--palette-secondary-light);
+    }
+  }
+  &__comment {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  &__comment-title {
+    font-size: 20px;
+    font-weight: var(--typography-fontWeightLight);
+    color: var(--palette-primary-main);
+  }
+  &__comment-field {
+    width: 100%;
+    height: 150px;
+    margin-top: 15px;
+    padding: 10px;
+    resize: none;
+  }
+  &__comment-btn {
+    padding: 11px 20px;
+    cursor: pointer;
+    transition-duration: 0.3s;
+    color: var(--palette-primary-text);
+    border: none;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    &:hover {
+      box-shadow: var(--shadows-2);
+    }
+    &:not(:active) {
+      background-color: var(--palette-primary-main);
+    }
+    &:active {
+      background-color: var(--palette-secondary-light);
+    }
+  }
+
+  &__link {
+    font-size: 20px;
+    font-weight: var(--typography-fontWeightLight);
+    display: flex;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    max-width: 400px;
+    padding: 11px 20px;
+    transition-duration: 0.3s;
+    color: var(--palette-primary-text);
+    border-radius: 5px;
+    @include media-breakpoint-up(md) {
+      margin-top: 40px;
+    }
+    @include media-breakpoint-down(md) {
+      margin-top: 20px;
+    }
+    &:hover {
+      box-shadow: var(--shadows-2);
+    }
+    &:not(:active) {
+      background-color: var(--palette-primary-dark);
+    }
+    &:active {
+      background-color: var(--palette-secondary-light);
+    }
+  }
+  &-ticket-list {
     position: absolute;
     top: 0;
     left: 0;
@@ -17,271 +148,126 @@
     transition-duration: 0.3s;
     transform: scale(0);
     &__container {
-        position: relative;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
+      position: relative;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
     }
     &__table-container {
-        overflow-y: scroll;
-        width: 100%;
-        max-height: 575px;
-        border: 1px solid var(--palette-primary-main);
-        &::-webkit-scrollbar {
-            width: 5px;
-            border-radius: 100px;
-            -webkit-appearance: none;
-        }
-        &::-webkit-scrollbar-thumb {
-            border-radius: 100px;
-            background-color: var(--palette-primary-dark);
-        }
-        &::-webkit-scrollbar-track {
-            background-color: var(--palette-primary-main);
-        }
+      overflow-y: scroll;
+      width: 100%;
+      max-height: 575px;
+      border: 1px solid var(--palette-primary-main);
+      &::-webkit-scrollbar {
+        width: 5px;
+        border-radius: 100px;
+        -webkit-appearance: none;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 100px;
+        background-color: var(--palette-primary-dark);
+      }
+      &::-webkit-scrollbar-track {
+        background-color: var(--palette-primary-main);
+      }
     }
     &__table {
-        width: 100%;
-        border-spacing: 0px;
-        background-color: var(--palette-primary-light);
+      width: 100%;
+      border-spacing: 0px;
+      background-color: var(--palette-primary-light);
     }
     &__table-row {
-        &:first-child {
-            position: sticky;
-            top: 0;
-            left: 0;
-            color: var(--palette-primary-text);
-            background-color: var(--palette-primary-main);
-        }
+      &:first-child {
+        position: sticky;
+        top: 0;
+        left: 0;
+        color: var(--palette-primary-text);
+        background-color: var(--palette-primary-main);
+      }
     }
     &__table-data {
-        font-weight: var(--typography-fontWeightLight);
-        text-align: center;
-        white-space: nowrap;
-        @include media-breakpoint-up(xl) {
-            font-size: 20px;
-            padding: 30px 10px;
-        }
-        @include media-breakpoint-down(xl) {
-            font-size: 16px;
-            padding: 20px 5px;
-        }
-        @include media-breakpoint-down(lg) {
-            padding: 10px 5px;
-        }
-        @include media-breakpoint-down(md) {
-            padding: 5px;
-        }
+      font-weight: var(--typography-fontWeightLight);
+      text-align: center;
+      white-space: nowrap;
+      @include media-breakpoint-up(xl) {
+        font-size: 20px;
+        padding: 30px 10px;
+      }
+      @include media-breakpoint-down(xl) {
+        font-size: 16px;
+        padding: 20px 5px;
+      }
+      @include media-breakpoint-down(lg) {
+        padding: 10px 5px;
+      }
+      @include media-breakpoint-down(md) {
+        padding: 5px;
+      }
     }
     &__btn-close {
-        // position: absolute;
-        // top: 100%;
-        // left: 50%;
-        font-size: 22px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 40px;
-        height: 40px;
-        margin-top: 15px;
-        transition-duration: 0.3s;
-        border: 2px solid;
-        border-radius: 50%;
-        background-color: var(--palette-primary-light);
-        &:hover {
-            box-shadow: var(--shadows-2);
-        }
-        &:active {
-            color: var(--palette-primary-light);
-            background-color: var(--palette-primary-main);
-        }
+      font-size: 22px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      margin-top: 15px;
+      transition-duration: 0.3s;
+      border: 2px solid;
+      border-radius: 50%;
+      background-color: var(--palette-primary-light);
+      &:hover {
+        box-shadow: var(--shadows-2);
+      }
+      &:active {
+        color: var(--palette-primary-light);
+        background-color: var(--palette-primary-main);
+      }
     }
-}
-
-.profile {
-    &__upload-img {
-        display: none;
+  }
+  &-center {
+    display: flex;
+    flex-direction: column;
+    &__title {
+      font-size: 40px;
+      font-weight: var(--typography-fontWeightLight);
+      color: var(--palette-secondary-text);
     }
     &__container {
-        display: flex;
-        flex-direction: column;
+      display: flex;
+      justify-content: space-between;
+      @include media-breakpoint-up(xl) {
+        margin-top: 100px;
+        gap: 40px;
+      }
     }
-    &__title {
-        color: var(--palette-tertiary-text);
-    }
-    &__body {
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        margin-top: 40px;
-        @include media-breakpoint-up(md) {
-            gap: 10px;
-        }
-        @include media-breakpoint-down(md) {
-            align-items: center;
-            flex-direction: column-reverse;
-            gap: 40px;
-        }
-    }
-    &__left {
-        display: grid;
-        gap: 20px;
-    }
-    &__avatar {
-        display: flex;
-        flex-direction: column;
-    }
-    &__avatar-img {
-        border: 2px solid var(--palette-primary-main);
-        border-radius: 50%;
-        object-fit: cover;
-        @include media-breakpoint-up(xl) {
-            width: 230px;
-            height: 230px;
-        }
-        @include media-breakpoint-down(xl) {
-            width: 200px;
-            height: 200px;
-        }
-    }
-    &__avatar-btn {
-        font-size: 20px;
-        font-weight: var(--typography-fontWeightLight);
-        display: flex;
-        align-items: center;
-        align-self: center;
-        justify-content: center;
-        margin-top: 20px;
-        padding: 11px 20px;
-        cursor: pointer;
-        transition-duration: 0.3s;
-        color: var(--palette-primary-text);
-        border-radius: 5px;
-        &:hover {
-            box-shadow: var(--shadows-2);
-        }
-        &:not(:active) {
-            background-color: var(--palette-primary-main);
-        }
-        &:active {
-            background-color: var(--palette-secondary-light);
-        }
-    }
-    &__comment {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    &__comment-title {
-        font-size: 20px;
-        font-weight: var(--typography-fontWeightLight);
-        color: var(--palette-primary-main);
-    }
-    &__comment-field {
-        width: 100%;
-        height: 150px;
-        margin-top: 15px;
-        padding: 10px;
-        resize: none;
-    }
-    &__comment-btn {
-        padding: 11px 20px;
-        cursor: pointer;
-        transition-duration: 0.3s;
-        color: var(--palette-primary-text);
-        border: none;
-        border-bottom-right-radius: 5px;
-        border-bottom-left-radius: 5px;
-        &:hover {
-            box-shadow: var(--shadows-2);
-        }
-        &:not(:active) {
-            background-color: var(--palette-primary-main);
-        }
-        &:active {
-            background-color: var(--palette-secondary-light);
-        }
-    }
-    &__center {
-        display: flex;
-        flex-direction: column;
-    }
-    &__center-container {
-        display: flex;
-        justify-content: space-between;
-        @include media-breakpoint-up(lg) {
-            width: 300px;
-            margin-top: 40px;
-        }
-        @include media-breakpoint-down(lg) {
-            width: 100%;
-            margin-top: 20px;
-        }
-        @include media-breakpoint-down(md) {
-            gap: 20px;
-        }
-    }
-    &__center-title {
-        font-size: 40px;
-        font-weight: var(--typography-fontWeightLight);
-        color: var(--palette-secondary-text);
-    }
-    &__link {
-        font-size: 20px;
-        font-weight: var(--typography-fontWeightLight);
-        display: flex;
-        align-items: center;
-        align-self: center;
-        justify-content: center;
-        max-width: 400px;
-        padding: 11px 20px;
-        transition-duration: 0.3s;
-        color: var(--palette-primary-text);
-        border-radius: 5px;
-        @include media-breakpoint-up(md) {
-            margin-top: 40px;
-        }
-        @include media-breakpoint-down(md) {
-            margin-top: 20px;
-        }
-        &:hover {
-            box-shadow: var(--shadows-2);
-        }
-        &:not(:active) {
-            background-color: var(--palette-primary-dark);
-        }
-        &:active {
-            background-color: var(--palette-secondary-light);
-        }
-    }
-}
-
-.center {
     &__item {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-        padding: 20px;
-        cursor: pointer;
-        transition-duration: 0.3s;
-        border-radius: 15px;
-        gap: 20px;
-        &:hover {
-            box-shadow: var(--shadows-1);
-        }
+      width: 135px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      padding: 20px;
+      cursor: pointer;
+      transition-duration: 0.3s;
+      border-radius: 15px;
+      gap: 20px;
+      &:hover {
+        box-shadow: var(--shadows-1);
+      }
     }
     &__item-text {
-        font-size: 20px;
-        font-weight: var(--typography-fontWeightLight);
-        text-align: center;
-        color: var(--palette-secondary-text);
+      font-size: 20px;
+      font-weight: var(--typography-fontWeightLight);
+      text-align: center;
+      color: var(--palette-secondary-text);
     }
     &__item-value {
-        font-size: 30px;
-        font-weight: var(--typography-fontWeightLight);
-        text-align: center;
-        color: var(--palette-tertiary-text);
+      font-size: 30px;
+      font-weight: var(--typography-fontWeightLight);
+      text-align: center;
+      color: var(--palette-tertiary-text);
     }
+  }
 }
