--- a/src/scss/sections/main/_gallery.scss
+++ b/src/scss/sections/main/_gallery.scss
@@ -7,7 +7,7 @@
     &::before {
       content: "";
       position: absolute;
-      bottom: 0;
+      bottom: 35px;
       left: 0;
       width: 100%;
       height: 15%;
